--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/couscous.html">Cous Cous and Feta Meatballs</a>
+    
 </body>
 </html>
