Added image and finished shrimp stew recipe. Also edited index.html to link to new recipe, as well as display links in an unordered list.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/couscous.html">Cous Cous and Feta Meatballs</a>
+
+    <ul>
+        <li><a href="recipes/couscous.html">Cous Cous and Feta Meatballs</a></li>
+        <li><a href="recipes/shrimp-stew.html">Creamy Tuscan-Inspired Shrimp Stew</a></li>
+
+    </ul>
     
 </body>
 </html>
